[gd_scene format=3 uid="uid://bq6apcviwprka"]

[ext_resource type="FontFile" uid="uid://paxdsahot7r8" path="res://systems/fonts/Inter-VariableFont_opsz,wght.ttf" id="1_4puko"]
[ext_resource type="Script" uid="uid://ycbsmq8vrgyd" path="res://systems/screen_effect_ui.gd" id="1_pa6um"]
[ext_resource type="FontFile" uid="uid://dxk7xhth31dks" path="res://systems/fonts/Cinzel-VariableFont_wght.ttf" id="3_6oit5"]

[sub_resource type="FontVariation" id="FontVariation_6oit5"]
base_font = ExtResource("1_4puko")
variation_opentype = {
1869640570: 32,
2003265652: 900
}

[sub_resource type="Theme" id="Theme_amene"]
default_font = SubResource("FontVariation_6oit5")

[sub_resource type="Gradient" id="Gradient_sq2sy"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pa6um"]
gradient = SubResource("Gradient_sq2sy")

[sub_resource type="Animation" id="Animation_7h2ja"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("text_chaptername:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("text_chaptertext:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextureRect:anchors_preset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cinematic-LetterBox:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2phdv"]
resource_name = "fade_black"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.03333334, 1.4333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:anchors_preset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_dqj3x"]
resource_name = "fade_in"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 2.4),
"transitions": PackedFloat32Array(1, 1.0000005),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:anchors_preset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_pa6um"]
resource_name = "fade_out"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.099999994, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:anchors_preset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_6oit5"]
resource_name = "show_titlecard"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("text_chaptername:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("text_chaptertext:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("text_chaptername:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.8666666, 4.8333335),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("text_chaptertext:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.8666666, 4.866667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_34jet"]
_data = {
&"RESET": SubResource("Animation_7h2ja"),
&"fade_black": SubResource("Animation_2phdv"),
&"fade_in": SubResource("Animation_dqj3x"),
&"fade_out": SubResource("Animation_pa6um"),
&"show_titlecard": SubResource("Animation_6oit5")
}

[sub_resource type="FontVariation" id="FontVariation_i2f7j"]
base_font = ExtResource("3_6oit5")
variation_opentype = {
2003265652: 900
}

[sub_resource type="FontVariation" id="FontVariation_amene"]
base_font = ExtResource("3_6oit5")
variation_opentype = {
2003265652: 400
}

[node name="ScreenEffect_UI" type="Control" unique_id=67784346]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_amene")
script = ExtResource("1_pa6um")
metadata/_edit_vertical_guides_ = [-247.0]

[node name="TextureRect" type="TextureRect" parent="." unique_id=1593074223]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_pa6um")

[node name="Cinematic-LetterBox" type="Control" parent="." unique_id=1015552810]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LetterBox-Top" type="TextureRect" parent="Cinematic-LetterBox" unique_id=1163880029]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2
texture = SubResource("GradientTexture2D_pa6um")

[node name="LetterBox-Bottom" type="TextureRect" parent="Cinematic-LetterBox" unique_id=773789016]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(1280, 64)
texture = SubResource("GradientTexture2D_pa6um")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=2026671632]
libraries/ = SubResource("AnimationLibrary_34jet")

[node name="text_chaptername" type="RichTextLabel" parent="." unique_id=1170915106]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.0
offset_top = -63.0
offset_right = 219.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = SubResource("FontVariation_i2f7j")
theme_override_font_sizes/normal_font_size = 48
text = "CHAPTER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text_chaptertext" type="RichTextLabel" parent="." unique_id=27890178]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -282.0
offset_top = -77.0
offset_right = 282.0
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = SubResource("FontVariation_amene")
theme_override_font_sizes/normal_font_size = 64
text = "\"CHAPTER TEXT\""
horizontal_alignment = 1
vertical_alignment = 1
